--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -36,6 +36,10 @@
         <servlet-name>CheckAttendacePastServlet</servlet-name>
         <servlet-class>controller.teacher.CheckAttendacePastServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>FilterStudentServlet</servlet-name>
+        <servlet-class>controller.teacher.FilterStudentServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -71,6 +75,10 @@
     <servlet-mapping>
         <servlet-name>CheckAttendacePastServlet</servlet-name>
         <url-pattern>/checkattendance</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FilterStudentServlet</servlet-name>
+        <url-pattern>/filter</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
